--- a/views/allUsers.phtml
+++ b/views/allUsers.phtml
@@ -47,7 +47,7 @@ ob_start();
       
       <div class="rightcolumn">
         <div class="card">
-          <h3>Bienvenue sur Réseau social</h3>
+          <h3>Bienvenue sur Society</h3>
           <div class="info_users">
             <p>Utilisateurs inscrits : <?= $nbUsers['COUNT(*)'] ?> </p>
           </div>
