--- a/views/dashboardAdmin.phtml
+++ b/views/dashboardAdmin.phtml
@@ -58,7 +58,7 @@ ob_start();
         
         <div class="rightcolumn">
           <div class="card">
-            <h3>Bienvenue sur Réseau social</h3>
+            <h3>Bienvenue sur SOCIETY/h3>
             <div class="info_users">
               <p>Utilisateurs inscrits : <?= $nbUsers['COUNT(*)'] ?> </p>
               <p>Nombre d'article(s) : <?= $nbPosts['COUNT(*)'] ?></p>
