--- a/views/_footer.phtml
+++ b/views/_footer.phtml
@@ -19,7 +19,7 @@
             <?php endif;?>
                 
         </p>
-        <p class="footer-company-name text-white">Copyright &copy; <?= getCurrentDate('Y'); ?> SOCIETY by 
+        <p class="footer-company-name text-white">Copyright &copy; <?= getCurrentDate('Y'); ?> SOCIETY Made by 
             <a href="https://www.sergetouvoli.com/">
                 <strong class="text-white" >Serge Touvoli</strong>
             </a> 
